--- a/package.json
+++ b/package.json
@@ -3,31 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@fontsource/roboto": "^5.0.8",
-    "@fortawesome/fontawesome-svg-core": "^1.2.36",
-    "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@fortawesome/react-fontawesome": "^0.1.16",
-    "@fvilers/disable-react-devtools": "^1.3.0",
-    "@material-ui/core": "^4.12.4",
-    "@mui/icons-material": "^5.14.3",
-    "@mui/material": "^5.14.3",
-    "@mui/styled-engine-sc": "^5.12.0",
-    "@mui/x-date-pickers": "^6.11.2",
-    "axios": "^0.24.0",
-    "date-fns": "^2.30.0",
-    "dayjs": "^1.11.9",
-    "jwt-decode": "^3.1.2",
-    "material-ui-popup-state": "^5.0.9",
+    "@auth0/auth0-react": "^1.9.0",
     "react": "^17.0.2",
-    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^17.0.2",
-    "react-quill": "^2.0.0",
-    "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.0",
-    "react-spinners": "^0.13.8",
-    "styled-components": "^5.3.11"
+    "react-scripts": "5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
