--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@auth0/auth0-react": "^1.9.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0"
   },
   "scripts": {
